I think I've solved concurrency, now it's dropped connections

--- a/featureCreation/aggregatorDocker/Dockerfile
+++ b/featureCreation/aggregatorDocker/Dockerfile
@@ -4,4 +4,4 @@ RUN pip install mysql-connector-python && \
     pip install pandas && \
     pip install pika && \
     pip install numpy
-CMD ["python3", "./aggregator.py"]
+CMD ["python3", "-u", "./aggregator.py"]
